# Homomorphic-Encryption-Algorithms-Diploma-Thesis

./: CMakeLists.txt  README.md
include/: demos.h  he_fft.h  he_linalg.h  he_math.h  he_operators.h  he_util.h  socket_io.h  tic_toc.h
src/core/: he_fft.cpp  he_linalg.cpp  he_math.cpp  he_operators.cpp  socket_io.cpp
src/demos/: client.cpp  client_server_rookie.cpp  demos.cpp  fft.cpp  math_operations.cpp  matrix_operations.cpp  server.cpp
